# videoeditingapp

./: CMakeLists.txt  MediaPoolManager.cpp  MediaPoolManager.h  backend.cpp  backend.h  build.bat  build.sh  main.cpp
qml/: Main.qml  resources.qrc
qml/components/: DockArea.qml  DockPanel.qml  Handle.qml  MediaPool.qml  Timeline.qml  TopBarMenu.qml  TopBarMenuItem.qml  Viewer.qml  utils.js
